@@ -1,3 +1,4 @@
+* [Bug 987] Wake up the resolver thread/process when a new interface has become available.
 * Correctly apply negative-sawtooth for oncore 12 channel receiver.
 * Startup code for original LinuxPPS removed.  LinuxPPS now conforms to
   the PPSAPI.
